[FIXED #91166980] Textarea has wrong padding.
Textarea did not display in line with other components in edit mode.
Now the textarea lines with textbox and other components in edit mode.

--- a/src/client/scss/x/_string.scss
+++ b/src/client/scss/x/_string.scss
@@ -10,4 +10,5 @@
 
 .x-string-edit {
 	@include inline-edit();
+	padding: 0px;
 }
